[package]
name = "wx-wasm-bindgen"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4"
native-tls = { version = "0.2", default-features = false, optional = true }
rouille = { version = "3.0.0", default-features = false }
serde = { version = "1.0", features = ['derive'] }
serde_derive = "1.0"
serde_json = "1.0"
tempfile = "3.0"
ureq = { version = "2.7", default-features = false, features = [
    "brotli",
    "gzip",
] }
walrus = "0.23"
wasm-bindgen-cli-support = { version = "0.2" }
wasm-bindgen-shared = { version = "0.2" }

[patch.crates-io]
wasm-bindgen-cli-support = { git = "https://github.com/BenLocal/wasm-bindgen", branch = "wx" }
wasm-bindgen-shared = { git = "https://github.com/BenLocal/wasm-bindgen", branch = "wx" }
